alterando nome yaml

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -2,7 +2,7 @@ name: Testes Regressivos
 
 on:
   push:
-    branches: [ dev ]
+    branches: [ pipeline ]
   pull_request:
     branches: [ dev ]
 
