--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -34,3 +34,10 @@ jobs:
 
     - name: Build with Maven
       run: mvn test -Dtest**/*RunCucumberTest cluecumber-report:reporting
+
+    - name: Test Reporter
+      uses: dorny/test-reporter@v1.4.3
+      with:
+        name: Run Tests
+        path: "*/surefire-reports/TEST-.xml"
+        reporter: java-junit
