--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -2,9 +2,9 @@ name: Testes Regressivos
 
 on:
   push:
-    branches: [ pipeline ]
+    branches: [ main ]
   pull_request:
-    branches: [ dev ]
+    branches: [ main ]
 
 jobs:
   build:
@@ -39,6 +39,5 @@ jobs:
       uses: dorny/test-reporter@v1.4.3
       with:
         name: Run Tests
-
-     path: "**/surefire-reports/TEST-*.xml"
-      reporter: java-junit
+        path: "**/surefire-reports/TEST-*.xml"
+        reporter: java-junit
