--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,7 +33,7 @@ jobs:
           sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # optional
     
     - name: Build with Maven
-    - run: mvn test -Dtest**/*RunCucumberTest cluecumber-report:reporting
+      run: mvn test -Dtest**/*RunCucumberTest cluecumber-report:reporting
 
     - name: Test Reporter
       uses: dorny/test-reporter@v1.4.3
