correcao retirada de traco do pipeline.yml

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -38,5 +38,6 @@ jobs:
     - name: Test Reporter
       uses: dorny/test-reporter@v1.4.3
       with:
+        name: runTest
         path: "**/surefire-reports/TEST-*.xml"
         reporter: java-junit
